--- a/docs.yaml
+++ b/docs.yaml
@@ -4,7 +4,7 @@ info:
   description: API for user authentication with register, login, and token validation.
   version: 1.0.0
 servers:
-  - url: http://localhost:3000
+  - url: http://localhost:8000
     description: Local development server
   - url: http://localhost:4000
     description: Local development server
@@ -61,6 +61,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  message:
+                    type: string
+                    example: succes
                   token:
                     type: string
                     example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
