--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "backend-api",
+  "name": "escore-backend-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "start-dev": "nodemon app.js"
   },
-  "author": "",
+  "author": "Escore",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^3.3.7",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   },
