--- a/docs.yaml
+++ b/docs.yaml
@@ -133,9 +133,9 @@ paths:
                     type: string
                     example: Internal server error!
 
-components:
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+# components:
+#   securitySchemes:
+#     bearerAuth:
+#       type: http
+#       scheme: bearer
+#       bearerFormat: JWT
