--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "nanoid": "^3.3.7",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
