--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@google-cloud/firestore": "^7.10.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "nanoid": "^3.3.7",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   },
